rearranged content and  added link to get book in print

--- a/index.html
+++ b/index.html
@@ -82,16 +82,33 @@
 		<section id="side-hacks">
 			<div class="content">
 
-				<h2>Side Projects &amp; Hacks</h2>
+				<div class="side-hack-container">
+					<h3 class="name"><a target="_blank" href="http://www.beautifulsymmetry.onl">Beautiful Symmetry: <span style="display: inline-block;">A Coloring Book about Math</span></a></h3>
+					<p class="description">A coloring book that illustrates group theory, both online and on paper.</p>
+					<p>Online: <a target="_blank" href="http://www.beautifulsymmetry.onl" class="link">beautifulsymmetry.onl</a></p>
+					<iframe style="border: 1px solid gray;" class="hack-container" src="http://www.coloring-book.co/"></iframe>
+
+					<br/>
+					<br/>
+
+					<p class="description">Published by the MIT Press</p>
+					<p>Get the print copy to color on paper: <a target="_blank" href="https://mitpress.mit.edu/books/beautiful-symmetry" class="link">mitpress.mit.edu/books/beautiful-symmetry</a></p>
+
+					<a target="_blank" href="https://mitpress.mit.edu/books/beautiful-symmetry">
+						<img class="hack-container" id="mit-press-2020-cover" src="/static/img/mit-press-2020-cover.jpg">
+					</a>
+					
+				</div>
+				<br/>
+				<hr/>
 				<br/>
 
 				<div class="side-hack-container">
-					<h3 class="name"><a target="_blank" href="http://www.beautifulsymmetry.onl">Beautiful Symmetry: <span style="display: inline-block;">A Coloring Book about Math</span></a></h3>
-					<a target="_blank" href="http://www.beautifulsymmetry.onl" class="link">beautifulsymmetry.onl</a>
-					<p class="description">A coloring book that illustrates group theory, both online and on paper.</p>
-					<iframe style="border: 1px solid gray;" class="hack-container" src="http://www.coloring-book.co/"></iframe>
+					<h3 class="name"><a target="_blank" href="https://www.media.mit.edu/people/aberke/overview/">Media Lab Projects</h3>
+					<a target="_blank" href="https://www.media.mit.edu/people/aberke/overview/" class="link">media.mit.edu/people/aberke</a>
 				</div>
 
+				<br/>
 				<br/>
 
 				<div class="side-hack-container">
@@ -100,8 +117,6 @@
 					<p class="description">Is the placement of bike-share docks equitable?</p>
 					<iframe style="width: 125%; transform: scale(0.8); transform-origin: 0 0;" class="hack-container" src="https://aberke.github.io/income-race-bikes/?ha"></iframe>
 				</div>
-
-				<br/>
 
 				<div class="side-hack-container">
 					<h3 class="name"><a target="_blank" href="https://www.media.mit.edu/projects/bike-swarm/overview/">[bike] swarm</h3>
@@ -115,13 +130,6 @@
 				<div class="side-hack-container">
 					<h3 class="name"><a target="_blank" href="https://medium.com/celohq/arbitrage-and-winning-a-cryptocurrency-trading-competition-at-mit-32e183766e42">Algorithmic Crypto-trading &amp; Arbitrage</h3>
 					<a target="_blank" href="https://medium.com/celohq/arbitrage-and-winning-a-cryptocurrency-trading-competition-at-mit-32e183766e42" class="link">medium.com/celohq/arbitrage-and-winning-a-cryptocurrency-trading-competition-at-mit-32e183766e42</a>
-				</div>
-
-				<br/>
-
-				<div class="side-hack-container">
-					<h3 class="name"><a target="_blank" href="https://www.media.mit.edu/people/aberke/overview/">Media Lab Projects</h3>
-					<a target="_blank" href="https://www.media.mit.edu/people/aberke/overview/" class="link">media.mit.edu/people/aberke</a>
 				</div>
 
 				<br/>
@@ -219,7 +227,7 @@
 				<br/>
 				<br/>
 
-				<h2>Some Writing</h2>
+				<h2>Other Writing</h2>
 				<br />
 
 				<ol id="writing-list">
@@ -229,8 +237,6 @@
 					<li>Published a <a href="http://www.huffingtonpost.com/entry/bitcoin-basics-explained-_n_4340141.html">3 part series about bitcoin on the Huffington Post:</a> <a href="http://www.huffingtonpost.com/entry/bitcoin-basics-explained-_n_4340141.html">(1)</a> <a href="http://www.huffingtonpost.com/entry/bitcoin-basics-explained_n_4374031.html">(2)</a> <a href="http://www.huffingtonpost.com/entry/bitcoin-basics-explained_n_4381235.html">(3)</a></li>
 
 					<li><a href="https://medium.com/@aberke/">Medium blog</a></li>
-
-					<li><a href="http://www.beautifulsymmetry.onl">"Beautiful Symmetry: A Coloring Book About Math"</a></li>
 
 				</ol>
 			</div>
