added  crypto voting project

--- a/index.html
+++ b/index.html
@@ -112,6 +112,20 @@
 				<br/>
 
 				<div class="side-hack-container">
+					<h3 class="name"><a target="_blank" href="https://medium.com/mit-media-lab/crypto-voting-us-elections-reality-554214b5c843">Crypto Voting + US Elections: Reality</a></h3>
+					<p class="description">On the security of blockchain, internet, and end-to-end verifiable voting systems, including the  cryptography behind how they work.</p>
+					<a target="_blank" href="https://medium.com/mit-media-lab/crypto-voting-us-elections-reality-554214b5c843" class="link">medium.com/mit-media-lab/crypto-voting-us-elections-reality-554214b5c843</a>
+				</div>
+				<br/>
+
+				<div class="side-hack-container">
+					<h3 class="name"><a target="_blank" href="https://medium.com/mit-media-lab/crypto-voting-us-elections-science-fiction-fb1e4af2d13a">Crypto Voting + US Elections: (Science Fiction) Short Stories From Potential Futures</a></h3>
+					<p class="description">These stories consider two potential futures for US democracy, branching from our present. One is dystopian, the other utopian.</p>
+					<a target="_blank" href="https://medium.com/mit-media-lab/crypto-voting-us-elections-science-fiction-fb1e4af2d13a" class="link">medium.com/mit-media-lab/crypto-voting-us-elections-science-fiction-fb1e4af2d13a</a>
+				</div>
+				<br/>
+
+				<div class="side-hack-container">
 					<h3 class="name"><a target="_blank" href="https://aberke.github.io/income-race-bikes">Income, Race, Bikes</h3>
 					<a target="_blank" href="https://aberke.github.io/income-race-bikes" class="link">aberke.github.io/income-race-bikes</a>
 					<p class="description">Is the placement of bike-share docks equitable?</p>
@@ -128,7 +142,7 @@
 				<br/>
 
 				<div class="side-hack-container">
-					<h3 class="name"><a target="_blank" href="https://medium.com/celohq/arbitrage-and-winning-a-cryptocurrency-trading-competition-at-mit-32e183766e42">Algorithmic Crypto-trading &amp; Arbitrage</h3>
+					<h3 class="name"><a target="_blank" href="https://medium.com/celohq/arbitrage-and-winning-a-cryptocurrency-trading-competition-at-mit-32e183766e42">Algorithmic Crypto-trading &amp; Arbitrage</a></h3>
 					<a target="_blank" href="https://medium.com/celohq/arbitrage-and-winning-a-cryptocurrency-trading-competition-at-mit-32e183766e42" class="link">medium.com/celohq/arbitrage-and-winning-a-cryptocurrency-trading-competition-at-mit-32e183766e42</a>
 				</div>
 
