--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
 
 				<br/>
 
-				<p>Currently at MIT’s Media Lab.</p>
+				<p>Currently at the MIT Media Lab</p>
 
 				<br/>
+				<p>Research focus: Cities as complex systems, security, and how large location datasets can serve the public while retaining individual privacy.</p>
 				<br/>
 				<br/>
 
@@ -66,9 +67,9 @@
 
 				<br/>
 
-				<p>Working at the intersection of technology and social impact.</p>
+				<p>Working at the intersection of technology and social impact; experienced in designing and deploying new software, and working with large distributed systems.</p>
 
-				<p>Most recently as a software engineer at Google, on a Search team focused on news credibility.</p>
+				<p>Most recently as a software engineer at Google, on a team tasked with fighting disinformation within Google Search.</p>
 
 				<br/>
 
@@ -83,9 +84,11 @@
 			<div class="content">
 
 				<div class="side-hack-container">
+					<p class="description">My book was recently published by the MIT Press</p>
+					<br/>
 					<h3 class="name"><a target="_blank" href="http://www.beautifulsymmetry.onl">Beautiful Symmetry: <span style="display: inline-block;">A Coloring Book about Math</span></a></h3>
 					<p class="description">A coloring book that illustrates group theory, both online and on paper.</p>
-					<p>Online: <a target="_blank" href="http://www.beautifulsymmetry.onl" class="link">beautifulsymmetry.onl</a></p>
+					<p>Interactive online: <a target="_blank" href="http://www.beautifulsymmetry.onl" class="link">beautifulsymmetry.onl</a></p>
 					<iframe style="border: 1px solid gray;" class="hack-container" src="http://www.coloring-book.co/"></iframe>
 
 					<br/>
@@ -95,7 +98,7 @@
 					<p>Get the print copy to color on paper: <a target="_blank" href="https://mitpress.mit.edu/books/beautiful-symmetry" class="link">mitpress.mit.edu/books/beautiful-symmetry</a></p>
 
 					<a target="_blank" href="https://mitpress.mit.edu/books/beautiful-symmetry">
-						<img class="hack-container" id="mit-press-2020-cover" src="/static/img/mit-press-2020-cover.jpg">
+						<img class="hack-img" src="/static/img/mit-press-2020-cover.jpg">
 					</a>
 					
 				</div>
@@ -115,9 +118,8 @@
 					<h3 class="name"><a target="_blank" href="https://medium.com/mit-media-lab/crypto-voting-us-elections-reality-554214b5c843">Crypto Voting + US Elections: Reality</a></h3>
 					<p class="description">On the security of blockchain, internet, and end-to-end verifiable voting systems, including the  cryptography behind how they work.</p>
 					<a target="_blank" href="https://medium.com/mit-media-lab/crypto-voting-us-elections-reality-554214b5c843" class="link">medium.com/mit-media-lab/crypto-voting-us-elections-reality-554214b5c843</a>
+					<img style="max-width: 600px;" class="hack-img" src="https://dam-prod.media.mit.edu/thumb/2020/01/11/pins-wide.png.1400x1400.png">
 				</div>
-				<br/>
-
 				<div class="side-hack-container">
 					<h3 class="name"><a target="_blank" href="https://medium.com/mit-media-lab/crypto-voting-us-elections-science-fiction-fb1e4af2d13a">Crypto Voting + US Elections: (Science Fiction) Short Stories From Potential Futures</a></h3>
 					<p class="description">These stories consider two potential futures for US democracy, branching from our present. One is dystopian, the other utopian.</p>
@@ -129,8 +131,9 @@
 					<h3 class="name"><a target="_blank" href="https://aberke.github.io/income-race-bikes">Income, Race, Bikes</h3>
 					<a target="_blank" href="https://aberke.github.io/income-race-bikes" class="link">aberke.github.io/income-race-bikes</a>
 					<p class="description">Is the placement of bike-share docks equitable?</p>
-					<iframe style="width: 125%; transform: scale(0.8); transform-origin: 0 0;" class="hack-container" src="https://aberke.github.io/income-race-bikes/?ha"></iframe>
+					<img style="max-width: 200px;" class="hack-img" src="https://raw.githubusercontent.com/aberke/income-race-bikes/master/assets/boston-income-race.gif">
 				</div>
+				<br/>
 
 				<div class="side-hack-container">
 					<h3 class="name"><a target="_blank" href="https://www.media.mit.edu/projects/bike-swarm/overview/">[bike] swarm</h3>
@@ -143,6 +146,7 @@
 
 				<div class="side-hack-container">
 					<h3 class="name"><a target="_blank" href="https://medium.com/celohq/arbitrage-and-winning-a-cryptocurrency-trading-competition-at-mit-32e183766e42">Algorithmic Crypto-trading &amp; Arbitrage</a></h3>
+					<p class="description">About winning an algorithmic cryptocurrency trading competition at MIT</p>
 					<a target="_blank" href="https://medium.com/celohq/arbitrage-and-winning-a-cryptocurrency-trading-competition-at-mit-32e183766e42" class="link">medium.com/celohq/arbitrage-and-winning-a-cryptocurrency-trading-competition-at-mit-32e183766e42</a>
 				</div>
 
@@ -155,6 +159,14 @@
 					</a>
 				</div>
 
+				<br/>
+				<br/>
+				<br/>
+				<br/>
+				<br/>
+				<br/>
+				<br/>
+				<h2>Past Side Projects</h2>
 				<br/>
 
 				<div class="side-hack-container">
@@ -170,7 +182,7 @@
 				<div class="side-hack-container">
 					<h3 class="name"><a href="https://www.crowdrise.com/syncwithus">#SyncWithUs</a></h3>
 					<a href="https://www.crowdrise.com/syncwithus" class="link">syncwithus.org</a>
-					<p class="description">Crowd funding to support women's health. (Created in collaboration.)</p>
+					<p class="description">Crowd funding to support women's health.</p>
 					
 					<img style="background: white; margin: 0; width: 200px; height: auto;" src="/static/img/syncwithus-swimmers-1.png" />
 				</div>
@@ -181,7 +193,7 @@
 					<p class="description">Created at the 2017 <a href="http://www.stupidhackathon.com/" target="_blank">Stupid Hackathon</a>.</p>
 
 					<a target="_blank" href="http://www.l0v3bot.com/">
-						<img style="border: 1px solid gray;" class="hack-container" id="love-bot-img" src="/static/img/lovebot-site-img.png">
+						<img style="border: 1px solid gray;" class="hack-img" id="love-bot-img" src="/static/img/lovebot-site-img.png">
 					</a>
 				</div>
 
@@ -208,7 +220,7 @@
 				<br/>
 				<br/>
 
-				<h2>Recent Talks &amp; Exhibitions</h2>
+				<h2>Past Talks &amp; Exhibitions</h2>
 				<br />
 
 				<ol id="talks-list">
