mobile fix & book description edit

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					<p class="description">My book was recently published by the MIT Press</p>
 					<br/>
 					<h3 class="name"><a target="_blank" href="http://www.beautifulsymmetry.onl">Beautiful Symmetry: <span style="display: inline-block;">A Coloring Book about Math</span></a></h3>
-					<p class="description">A coloring book that illustrates group theory, both online and on paper.</p>
+					<p class="description">A coloring book as an illustrated introduction to group theory, both online and on paper.</p>
 					<p>Interactive online: <a target="_blank" href="http://www.beautifulsymmetry.onl" class="link">beautifulsymmetry.onl</a></p>
 					<iframe style="border: 1px solid gray;" class="hack-container" src="http://www.coloring-book.co/"></iframe>
 
