nit: preserve user privacy

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<p>Currently at the MIT Media Lab</p>
 
 				<br/>
-				<p>Research focus: Cities as complex systems, security, and how large location datasets can serve the public while retaining individual privacy.</p>
+				<p>Research focus: Cities as complex systems, security, and how large location datasets can serve the public while preserving individual privacy.</p>
 				<br/>
 				<br/>
 
