--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">  
 		<title>aberke | Alex Berke</title>  
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="Alex Berke | Full of internets and adventures. Currently at MIT's Media Lab.">
+		<meta name="description" content="Computer science, Systems, Art. Currently: research at the MIT Media Lab. Previously: building technology for social impact.">
 		<meta name="author" content="Alex Berke">
 		<link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
 		<meta property="og:image" content="/static/favicon-big.gif" />
@@ -17,7 +17,7 @@
 		"name": "Alex Berke",
 		"image": [
 		"http://www.aberke.com/static/img/static/headshot.png"],
-		"description": "Alex Berke | aberke"
+		"description": "Alex Berke | aberke | Computer science, Systems, Art. Currently: research at the MIT Media Lab. Previously: building technology for social impact."
 	}
 	</script>
 	<body>
