updated research focus description

--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
 
 				<p>Currently at the MIT Media Lab</p>
 
-				<br/>
-				<p>Research focus: Cities as complex systems, security, and how large location datasets can serve the public while preserving individual privacy.</p>
+				<p>Research focus: Cities and sustainability, decentralized systems, data privacy, democratizing benefits of large datasets while preserving privacy.</p>
 				<br/>
 				<br/>
 
