updated styling immediately following content update

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 				<br/>
 				<p>
 					My PhD thesis is about transforming digital traces collected from us 
-					by companies - purchases, locations collected via mobile devices, web browsing data - 
-					into public goods, as well as the privacy implications of our commercial 
+					by companies - purchases, locations via mobile devices, web browsing data - 
+					into public goods, along with the privacy implications of our commercial 
 					surveillance economies and potential mitigations.
 				</p>
 				<br/>
@@ -62,17 +62,14 @@
 					<a target="_blank" href="https://twitter.com/AlexandraBerke"><p><img src="static/img/twitter_bird.png">[Tweets] https://twitter.com/AlexandraBerke</p></a>
 
 					<a target="_blank" href="resume-json">
-						<p><span class="img last" style="color:white;">{  }</span> [Resume for nerds] JSON Resume</p>
+						<p><span class="img" style="color:white; font-size: 1.2em;">{  }</span> [Resume for nerds] JSON Resume</p>
 					</a>
 
-					<br/>
 					<a target="_blank" href="old-projects">
-						<p><span class="img last" style="color:white;"> & </span> Outdated projects page</p>
+						<p><span class="img last" style="color:white; font-size: 1.2em;"> & </span> Outdated projects page</p>
 					</a>
 				</div>
 				<!-- handle div -->
-
-				<hr/>
 
 
 			</div>
@@ -87,7 +84,7 @@
 					<p><a target="_blank" href="https://mitpress.mit.edu/books/beautiful-symmetry" class="link">mitpress.mit.edu/books/beautiful-symmetry</a></p>
 
 					<a target="_blank" href="https://mitpress.mit.edu/books/beautiful-symmetry">
-						<img style="height: 240px; width: auto; margin: 10px 0;" src="/static/img/mitpress-buy-now.jpg">
+						<img style="height: 240px; width: auto; margin: 10px 0; border: 1px solid gray;" src="/static/img/mitpress-buy-now.jpg">
 					</a>
 
 					<p class="description">An illustrated and gamified introduction to group theory, both online and on paper.</p>
