Update iframe to https://www.beautifulsymmetry.onl/

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					</p>
 					
 					<p><a target="_blank" href="http://www.beautifulsymmetry.onl" class="link">beautifulsymmetry.onl</a></p>
-					<iframe style="border: 1px solid gray;" class="hack-container" src="http://www.coloring-book.co/"></iframe>
+					<iframe style="border: 1px solid gray;" class="hack-container" src="https://www.beautifulsymmetry.onl/"></iframe>
 
 					<br/>
 					<br/>
