fixed broken CV link

--- a/past-creative-projects.html
+++ b/past-creative-projects.html
@@ -26,8 +26,8 @@
                 <ul class="navbar-nav ml-auto flex-nowrap"> 
                     <li class="nav-item "> 
                         <span class="nav-link">
-                        <a target="_blank" href="CV.pdf">CV</a> 
-                    </span>
+                            <a target="_blank" href="static/CV.pdf">CV</a> 
+                        </span>
                     </li> 
                     <li class="nav-item "> 
                         <a class="nav-link" href="https://scholar.google.com/citations?user=1SaHM5UAAAAJ">Publications</a> 
