fixed hamburger menu button and upated CV to include HCI

--- a/past-creative-projects.html
+++ b/past-creative-projects.html
@@ -22,9 +22,10 @@
             <button class="navbar-toggler collapsed ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> 
                 <span class="sr-only">Toggle navigation</span> 
                 <span class="navbar-toggler-icon"></span> 
-            </button> <div class="collapse navbar-collapse text-right" id="navbarNav"> 
+            </button> 
+            <div class="collapse navbar-collapse text-right" id="navbarNav"> 
                 <ul class="navbar-nav ml-auto flex-nowrap"> 
-                    <li class="nav-item "> 
+                    <li class="nav-item"> 
                         <span class="nav-link">
                             <a target="_blank" href="static/CV.pdf">CV</a> 
                         </span>
@@ -149,9 +150,9 @@
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-10">
-                <br/>
-            <!-- <h1>OLDER SIDE PROJECTS</h1> -->
-            </div></div>
+            <br/>
+            </div>
+        </div>
         <br/>
         <br/>
 
@@ -194,7 +195,6 @@
         </div></div>
         <br/>
         <br/>
-
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-10">
@@ -208,10 +208,12 @@
             </div>
         </div></div>
     </section>
-
     <br/>
     <br/>
     <br/>
     <br/>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     </body>
 </html>
