updated color for coloring book link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                         <a class="nav-link" href="https://scholar.google.com/citations?user=1SaHM5UAAAAJ">Publications</a> 
                     </li> 
                     <li class="nav-item"> 
-                        <a id="nav-coloring-book" class="nav-link" href="past-creative-projects#coloring-book">Coloring book</a> 
+                        <a id="nav-coloring-book" class="nav-link" href="past-creative-projects#coloring-book">
+                            Coloring Book
+                        </a> 
                     </li> 
                     <li class="nav-item "> 
                         <a class="nav-link" href="past-creative-projects">Creative projects</a> 
