added 2023 pitch to creative projects

--- a/past-creative-projects.html
+++ b/past-creative-projects.html
@@ -97,6 +97,28 @@
         </div></div>
         <br/>
         <br/>
+        <br/>
+        <br/>
+
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-10">
+
+                    <h3 class="name"><a target="_blank" href="https://www.media.mit.edu/projects/v-labels">Media Lab Festival of Learning (FoL) 2023 "Crazy Ideas Pitch"</h3>
+                    <a target="_blank" href="https://www.media.mit.edu/projects/v-labels" class="link">media.mit.edu/projects/v-labels</a>
+                    <p class="description">
+                        I ran a research experiment with the Media Lab community as unknowing participants. The study was later published in the journal <a target="_blank" href="https://doi.org/10.1016/j.appet.2023.106767">Appetite (link)</a>.
+                    </p><p>
+                        To "debrief" the study participants per our IRB protocol, I presented a "crazy idea" at the Media Lab's <a target="_blank" href="https://thefestival.media.mit.edu/">FoL</a> "Crazy Ideas" pitchfest.
+                    </p>
+                    <div>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/L2Azy1b6vAw?si=isC32QoOs-OsSLph&amp;start=11" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+        </div></div>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-10">
