--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>aberke</title> 
     <title>aberke | Alex Berke</title>  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Computer science, Systems, Art. Currently: research at the MIT Media Lab. Previously: building technology for social impact.">
+    <meta name="description" content="Computer science, Systems, Privacy, Art. Conducting research and building technology for social impact.">
     <meta name="author" content="Alex Berke">
     <link rel="shortcut icon" href="static/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
