added babycastles show

--- a/past-creative-projects.html
+++ b/past-creative-projects.html
@@ -181,6 +181,59 @@
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-10">
+                <h3 id="babycastles-show" class="name">Solo gallery exhibition: Wallpaper @ Babycastles</h3>
+                <a href="https://www.babycastles.com/master-calendar/wallpaper-an-interactive-coloring-exhibition" target="_blank">babycastles.com/master-calendar/wallpaper-an-interactive-coloring-exhibition</a>
+                <br/>
+                <br/>
+                <p>A solo exhibition at the Babycastles gallery and game arcade in Manhattan, NY. 
+                    This was an invitation to color on the walls and interact with mathematical symmetry challenges, from my project 
+                    <a href="https://www.beautifulsymmetry.onl/info#events" target="_blank">"Illustrating Group Theory"</a>.
+                </p>
+                <!-- <img style="max-width: 300px;" src="static/img/wallpaper/babycastles-poster.gif" /> -->
+                <p>
+                    The exhibition opened with black and white wallpaper posters on white walls. On each poster was a different wallpaper group pattern, accompanied by a description of the symmetries within it, as well as markers and a challenge. The challenge was to participate in a cooperative coloring game: see the symmetries within the wallpaper patterns and add color in a way to maintain the symmetries, in accordance with how others had already added color to the pattern.
+                </p>
+                <p>
+                    There were also pattern worksheets/coloring puzzles on tables alongside the posters. These had patterns from the same wallpaper groups as the posters, but with different designs. They were accompanied by challenges, specific to the wallpaper pattern, for participants to use color to destroy some symmetries while maintaining others.
+                </p>
+                
+                <div class="img-carousel babycastles">
+                    <img src="static/img/wallpaper/before-front-long.JPG" />
+                    <img src="static/img/wallpaper/party-ppl-john-neil-peter.JPG" />
+                    <img src="static/img/wallpaper/algorave-with-coloring.JPG" />
+                </div>
+                <p>
+                    Babycastles is both a gallery and a game arcade. The arcade cabinets were installed with mathematical art and puzzle games, as well as interfaces to animate the wallpaper patterns seen on the walls.
+                </p>
+                <div class="img-carousel babycastles">
+                    <img src="static/img/wallpaper/game-cabinet-john-playing-3.JPG" />
+                    <img src="static/img/wallpaper/game-cabinet-with-controller.JPG" />
+                </div>
+                <p>
+                    At the end of the month-long exhibition, the black and white wallpaper pattern posters had been filled with color.
+The exhibition closing party was an “Algo-rave BBQ” with live coding musical and visual performances within the gallery, and a BBQ in the back patio. With more coloring.
+
+                </p>
+                <br/>
+                <br/>
+            </div>
+        </div>
+
+</section>
+
+    <section id="older-side-projects" class="container">
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-10">
+            <br/>
+            </div>
+        </div>
+        <br/>
+        <br/>
+
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-10">
             <h3 class="name"><a target="_blank" href="https://aberke.github.io/fractals/">Fractals</a></h3>
             <a href="https://aberke.github.io/fractals/" target="_blank" class="link">aberke.github.io/fractals</a>
             <a target="_blank" href="https://aberke.github.io/fractals/">
@@ -220,15 +273,16 @@
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-10">
-            <h3 class="name"><a target="_blank" href="https://github.com/aberke/eat-healthy-NYC">NY Farmers Markets</a></h3>
-            <p class="description">Advancing access to healthy and sustainable eating, with a focus on low income families.</p>
-            <p>Previously @ <a href="https://github.com/aberke/eat-healthy-NYC" class="link">farmers-markets.nyc</a></p>
-            <div class="img-carousel">
-                <img src="https://raw.githubusercontent.com/aberke/eat-healthy-NYC/master/demo-assets/mobile-info-closed.png" />
-                <img src="https://raw.githubusercontent.com/aberke/eat-healthy-NYC/master/demo-assets/mobile-info-open-1.png" />
-                <img src="https://raw.githubusercontent.com/aberke/eat-healthy-NYC/master/demo-assets/mobile-info-open-2.png" />
+                <h3 class="name"><a target="_blank" href="https://github.com/aberke/eat-healthy-NYC">NY Farmers Markets</a></h3>
+                <p class="description">Advancing access to healthy and sustainable eating, with a focus on low income families.</p>
+                <p>Previously @ <a href="https://github.com/aberke/eat-healthy-NYC" class="link">farmers-markets.nyc</a></p>
+                <div class="img-carousel">
+                    <img src="https://raw.githubusercontent.com/aberke/eat-healthy-NYC/master/demo-assets/mobile-info-closed.png" />
+                    <img src="https://raw.githubusercontent.com/aberke/eat-healthy-NYC/master/demo-assets/mobile-info-open-1.png" />
+                    <img src="https://raw.githubusercontent.com/aberke/eat-healthy-NYC/master/demo-assets/mobile-info-open-2.png" />
+                </div>
             </div>
-        </div></div>
+        </div>
     </section>
     <br/>
     <br/>
