--- a/past-creative-projects.html
+++ b/past-creative-projects.html
@@ -106,10 +106,11 @@
 
                     <h3 class="name"><a target="_blank" href="https://www.media.mit.edu/projects/v-labels">Media Lab Festival of Learning (FoL) 2023 "Crazy Ideas Pitch"</h3>
                     <a target="_blank" href="https://www.media.mit.edu/projects/v-labels" class="link">media.mit.edu/projects/v-labels</a>
+                    <br/><br/>
                     <p class="description">
-                        I ran a research experiment with the Media Lab community as unknowing participants. The study was later published in the journal <a target="_blank" href="https://doi.org/10.1016/j.appet.2023.106767">Appetite (link)</a>.
+                        I ran a research experiment with the Media Lab community as unknowing study participants. The study was later published in the journal <a target="_blank" href="https://doi.org/10.1016/j.appet.2023.106767">Appetite (link)</a>.
                     </p><p>
-                        To "debrief" the study participants per our IRB protocol, I presented a "crazy idea" at the Media Lab's <a target="_blank" href="https://thefestival.media.mit.edu/">FoL</a> "Crazy Ideas" pitchfest.
+                        To "debrief" the study participants per our IRB protocol, I presented a "crazy idea" at the Media Lab's <a target="_blank" href="https://thefestival.media.mit.edu/">FoL</a> "Crazy Ideas" pitch session.
                     </p>
                     <div>
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/L2Azy1b6vAw?si=isC32QoOs-OsSLph&amp;start=11" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -186,7 +187,7 @@
                 <br/>
                 <br/>
                 <p>A solo exhibition at the Babycastles gallery and game arcade in Manhattan, NY. 
-                    This was an invitation to color on the walls and interact with mathematical symmetry challenges, from my project 
+                    This was an invitation to color on the walls and play with mathematical symmetry challenges, from my project 
                     <a href="https://www.beautifulsymmetry.onl/info#events" target="_blank">"Illustrating Group Theory"</a>.
                 </p>
                 <!-- <img style="max-width: 300px;" src="static/img/wallpaper/babycastles-poster.gif" /> -->
