Update index.html with bio

--- a/index.html
+++ b/index.html
@@ -54,22 +54,31 @@
             <div class="col-md-9">
                 <h2>Alex Berke</h2>
                 <p>
-                    I'm currently a PhD candidate at MIT, in the Media Lab's City Science group.
-                <!-- </p>
-                <p> -->
+                    I'm currently a research scientist at Google, focused on privacy enhancing technologies.
+                </p>
+                <p>
+					PhD research
                     <br/>
-                    My thesis committee includes <a href="https://www.media.mit.edu/people/kll/overview/" target="_blank">Kent Larson</a>, <a href="https://en.wikipedia.org/wiki/Alex_Pentland" target="_blank">Sandy Pentland</a>, and <a href="https://www.hks.harvard.edu/faculty/latanya-sweeney" target="_blank">Latanya Sweeney</a>.
+					I received my PhD from MIT, advised by <a href="https://www.media.mit.edu/people/kll/overview/" target="_blank">Kent Larson</a> in the MIT Media Lab's City Science group.
+                    <br/>
+                    My thesis committee included <a href="https://www.hks.harvard.edu/faculty/latanya-sweeney" target="_blank">Latanya Sweeney</a> and <a href="https://en.wikipedia.org/wiki/Alex_Pentland" target="_blank">Sandy Pentland</a>.
                 </p>
+				<p><i>Who benefits from the data we unavoidably generate in our digitized economies - companies or communities?</i></p>
+				<p>
+					My thesis work integrates computational privacy and social science research, and repurposes commercial surveillance 
+					data to help empower the communities from whom data are collected. I've done this by developing data crowdsourcing 
+					tools, analyzing privacy risks, designing privacy enhancing technology, and leveraging these data for computational social science.
+					My focus is on the digital traces we unavoidably generate, such as mobile phone location data, web browsing data, and purchase histories. 
+				</p>
                 <p>
-                    Before graduate school, I worked for years in industry, at the intersection of technology and social impact.
+                    Beyond my thesis, my PhD work is interdisciplinary, spanning behavioral economics, cryptography, sustainability and transportation.
                 </p>
+				<p>
+					Before graduate school
+				</p>
                 <p>
-                    I am a computational researcher who repurposes commercial surveillance data to help empower the communities from whom data are collected. I do this by developing data crowdsourcing tools, analyzing privacy risks, designing privacy enhancing technology, and leveraging these data for computational social science.
-I focus on the digital traces we unavoidably generate, such as mobile phone location data, web browsing data, and purchase histories. 
-
+                    I gained years of industry experience working as an engineer at the intersection of technology and social impact.
                 </p>
-                <p>
-                    My work is interdisciplinary, spanning privacy and cryptography, behavioral economics, sustainability and transportation. I'm an engineer and I build the tools I use to do my research.                </p>
             </div>
         </div>
 		<br/>
