Update index.html formatting

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 <h2>Alex Berke</h2>
                 <p>
                     I'm currently a research scientist at Google, focused on privacy enhancing technologies.
+					<br/>
                 </p>
                 <p>
 					PhD research
@@ -75,10 +76,7 @@
                     Beyond my thesis, my PhD work is interdisciplinary, spanning behavioral economics, cryptography, sustainability and transportation.
                 </p>
 				<p>
-					Before graduate school
-				</p>
-                <p>
-                    I gained years of industry experience working as an engineer at the intersection of technology and social impact.
+					Before graduate school I gained years of industry experience, working as an engineer at the intersection of technology and social impact.
                 </p>
             </div>
         </div>
