--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>aberke | Alex Berke</title>  
+    <title>Alex Berke</title>  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Computer science, Systems, Privacy, Art. Conducting research and building technology for social impact.">
     <meta name="author" content="Alex Berke">
